--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.12.5",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-doom": "^1.0.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "sonner": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
