--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
